--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Web App</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Welcome to My Web App</h1>
-      <p>This is a simple app with A/B testing functionality.</p>
+      <p>This is a simple app that uses A/B testing for its user pages.</p>
     </header>
     <section>
-      <a href="/user_page" class="button">Go to User Page</a>
+      <button class="button" onclick="goToUserPage()">Go to User Page</button>
     </section>
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
