--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Web App</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Web App Homepage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
     <header>
-      <h1>Welcome to My Web App</h1>
-      <p>This is a simple app that uses A/B testing for its user pages.</p>
+        <div class="container">
+            <h1>Welcome to Our Web App</h1>
+            <p>Your go-to solution for managing tasks efficiently.</p>
+        </div>
     </header>
-    <section>
-      <button class="button" onclick="goToUserPage()">Go to User Page</button>
+
+    <section class="description">
+        <div class="container">
+            <h2>About Our App</h2>
+            <p>Our web app is designed to help you stay organized and boost your productivity. With a simple and intuitive interface, managing tasks and projects has never been easier. Whether you're working alone or collaborating with a team, our app has all the features you need to stay on top of your work.</p>
+        </div>
     </section>
-  </div>
-  <script src="app.js"></script>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Web App Inc. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
